Prevent more/less buttons from wrapping
The text of the more/less buttons was spotted
as wrapping in ja locale.

--- a/src/css/popup-fenix.css
+++ b/src/css/popup-fenix.css
@@ -227,6 +227,7 @@ body.mobile.no-tooltips .toolRibbon .tool {
     margin: 0;
     padding: var(--popup-gap-thin) var(--popup-gap);
     user-select: none;
+    white-space: nowrap;
     }
 :root.mobile #moreOrLess > span {
     padding: var(--popup-gap);
